--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,10 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
+    - name: make DynamicArray
+      run: make -f DynamicArrayTestmake.mk
     - name: make check
       run: make check
     - name: make distcheck
