--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: What directory is this? Where the h*ck is my makefile?
-      run: ls
-    - name: make DynamicArray
-      run: make -f Data_Structures/DynamicArray/DynamicArrayTestmake.mk
+    - name: Change Directory
+      run: cd Data_Structures/DynamicArray/
+    - name: make DynamicArrayTest
+      run: make -f DynamicArrayTestmake.mk
     - name: make check
       run: make check
     - name: make distcheck
