--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -11,7 +11,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: make DynamicArrayTest
       run: cd Data_Structures/DynamicArray/ && make -f DynamicArrayTestmake.mk
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: make test
+      run: make -f DynamicArrayTestmake.mk test
