--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,5 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: make DynamicArrayTest
-      run: cd Data_Structures/DynamicArray/ && make -f DynamicArrayTestmake.mk && ./DynamicArrayTest
+    - name: Setup tests for DynamicArray
+      working-directory: ./Data-Structures/DynamicArray/
+      run: make -f DynamicArrayTestmake.mk
+    - name: Run tests for DynamicArray
+      working-directory: ./Data-Structures/DynamicArray/
+      run: ./DynamicArrayTest
