--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,9 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup tests for DynamicArray
-      working-directory: Data_Structures/DynamicArray/
-      run: make -f DynamicArrayTestmake.mk
-    - name: Run tests for DynamicArray
-      working-directory: Data_Structures/DynamicArray/
-      run: ./DynamicArrayTest
+    - name: Setup tests for DynamiC
+      working-directory: Data_Structures/DynamiC/
+      run: make -f DynamiCTestmake.mk
+    - name: Run tests for DynamiC
+      working-directory: Data_Structures/DynamiC/
+      run: ./DynamiCTest
