--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ dkms.conf
 Data_Structures/DynamiC/DynamiCTest
 .vscode/c_cpp_properties.json
 Data_Structures/LinkC/LinkCTest
+Data_Structures/bstC/bstCTest
