Added a doxyfile to start assisting with documentation

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ Data_Structures/DynamiC/DynamiCTest
 Data_Structures/LinkC/LinkCTest
 Data_Structures/bstC/bstCTest
 Data_Structures/HashC/HashCTest
+Data_Structures/GraphC/GraphC
